--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
+<h1><a href="https://threader.tk/">THREADER.TK</a></h1>
+<p>This is a link shortner.</p>
+</body>
+</html>
