--- a/00002/index.html
+++ b/00002/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MY SHORTNER</title>
-    <meta
-      http-equiv="refresh"
-      content="0;
-        URL='https://drive.google.com/file/d/1TODGShq8xXhKkPBYNFGkGB_To29Hk0mY/view?usp=sharing'"
-    />
-  </head>
-  <body></body>
+<body style="background-color:powderblue;">
+<h1>NOT AVAILABLE</h1>
+<p>THIS LINK IS BEEN REMOVED.</p>
+</body>
 </html>
