--- a/manik/index.html
+++ b/manik/index.html
@@ -5,7 +5,7 @@
     <meta
       http-equiv="refresh"
       content="2;
-        URL=''"
+        URL='https://drive.google.com/drive/folders/1PKxEIDpEnJK8Dy4-pszqp1-bRSJC5mus?usp=sharing'"
     />
   </head>
   <body></body>
